<resources>
    <string name="app_name">Братишка</string>

    <!--Окно авторизации -->
    <string name="number_phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">ЗАБЫЛ ПАРОЛЬ</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>

    <!--Окно восстановления пароля -->
    <string name="change_pass_text">СМЕНИТЬ ПАРОЛЬ</string>
    <string name="code_text">Код</string>
    <string name="get_the_code_text"><u>Получить код</u></string>
    <string name="forgot_txt_information">Вам придет код в смс сообщении по вашему номеру</string>
    <string name="new_input_new_pass_text">Новый пароль</string>
    <string name="repeat_the_pass_text">Повторите пароль</string>
    <string name="apply_text">Применить</string>

    <string name="text_null">Поле пустое!</string>

    <!--Окна регистрации -->
    <string name="input_email_for_registration">Введитe вашу электронную почту для регистрации</string>
    <string name="get_the_code_btn">Получить код</string>
    <string name="registration_window">РЕГИСТРАЦИЯ</string>
    <string name="check_email">Подтвердите почту</string>
    <string name="input_code">Введите код полученный по электронной почте</string>
    <string name="not_code_received">Если код не пришёл, вы можете запросить код повторно</string>
    <string name="change_number"><u>Изменить электронную почту</u></string>
    <string name="rules_and_confidentiality">Я ознакомился с правилами, политикой конфиденциальности и принимаю их условия</string>

    <!-- Окно выбора города -->
    <string name="select_city">Выберите город</string>
    <string name="search">Поиск</string>

    <!--Главное меню -->
    <string name="entry">Запись</string>
    <string name="branches">Филиалы</string>
    <string name="profile">Профиль</string>
    <string name="my_notes">Мои записи</string>
    <string name="title_activity_main_menu">Главное меню</string>

    <!--Фрагмент "Запись -->
    <string name="haircuts">Стрижки</string>
    <string name="shop">Магазин</string>
    <string name="shop_basket">Корзина</string>
    <string name="notifications">Уведомления</string>
    <string name="price">Цена</string>
    <string name="name_haircuts">Название</string>
    <string name="description">Описание</string>
    <string name="type_product">Тип</string>
    <string name="name_product">Наименование</string>
    <string name="rating_product">0.0</string>
    <string name="description_product">Описание</string>
    <string name="my_basket">Моя корзина</string>
    <string name="my_notifications">Уведомления</string>
    <string name="pay">Оплатить</string>
    <string name="promo_code">Промокод</string>
    <string name="use_bonus">Воспользоваться бонусами</string>
    <string name="entry_haircut">Записаться</string>
    <string name="info_product_descr">
        1.ДОРОГО!
        Сходу нe соглашусь, нет, конечно если сравнивать c эконом парихмахерскими, то может будет
        и дорого, но ты же не приходишь в кафе и не говоришь, что тут дороже, чем в Пятерочке
        за углом. Стоимость стрижки в Барбершопе Братишка составляет 500 рублей.
        В эту стоимость входит: помывка головы (дважды!), подбор индивидуальной прически по форме
        черепа, рекомендация от мастера, а так же укладка и в итоге ты уходишь с идеально
        подобранной стрижкой и хорошим настроением.
    </string>

    <string name="add_basket">Добавить в корзину</string>
    <string name="checkout">Оформить заказ</string>
    <string name="go_to_payment">Перейти к оплате</string>

    <!--Фрагмент "Профиль" -->
    <string name="name">Имя</string>
    <string name="patronimyc">Отчество</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="number_phone_user">Номер телефона</string>
    <string name="city">Город</string>
    <string name="date_birth">Дата рождения</string>
    <string name="pattern_date_birth">дд-ММ-гггг</string>
    <string name="edit_profile_user">Редактировать профиль</string>
    <string name="editing">Редактирование</string>
    <string name="exit_app">Выйти</string>
    <string name="change_pass_profile">Сменить пароль</string>
    <string name="save">Сохранить</string>

    <!--Окно Филиалы -->
    <string name="list_cities">Список</string>
    <string name="map_branches">На карте</string>
    <string name="address_branches">Адрес</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Окно Корзина -->
    <string name="product_in_basket">Товаров в корзине</string>
    <string name="total">Итого</string>
    <string name="roubles">₽</string>


</resources>