<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.editprofile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photo_profile_user"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_gravity="bottom|center_horizontal"
            app:srcCompat="@drawable/photo_profile" />

        <ImageView
            android:id="@+id/download_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|right"
            app:srcCompat="@drawable/edit_photo_profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/surname"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtPatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/patronimyc"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/edtNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/number_phone_user"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtDateBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/pattern_date_birth"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="datetime"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtCityUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/city"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rectangle"
            android:text="@string/change_pass_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>