<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bratishka_logo_recovery"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/inNumber"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/code_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_auth"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/gtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_the_code_text"
            android:textAlignment="center"
            android:textColor="@color/splashscreen"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/forgot_txt_information"
            android:textColor="@color/text_color_auth"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_auth"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:text="mr.zudkin@mail.ru"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nwPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/new_input_new_pass_text"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_auth"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rptPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/repeat_the_pass_text"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_auth"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/apBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:text="@string/apply_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>