<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="@color/splashscreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="198dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo_splashscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/authEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:textColorHint="@color/text_color_auth"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            android:textColor="@color/text_color_auth"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/authPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/text_color_auth"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            android:textColor="@color/text_color_auth"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/text_button_color_sign"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:background="@drawable/button_sign_in" />

        <TextView
            android:id="@+id/registrationUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassUser"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>