<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/lnrInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_auth"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/getCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_the_code_text"
            android:textAlignment="center"
            android:textColor="@color/splashscreen"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrGetCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/lnrInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/inputCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_auth"
            android:hint="@string/code_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_auth"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:padding="1dp"
        android:text="@string/forgot_txt_information"
        android:textColor="@color/text_color_auth"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnrGetCode"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/emailForgotUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="1dp"
        android:text=""
        android:textColor="@color/text_color_auth"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnrGetCode"
        tools:ignore="MissingConstraints"
        tools:text="mr.zudkin@mail.ru" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/new_input_new_pass_text"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_auth"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/repeat_the_pass_text"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_auth"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/applyBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/apply_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>